--- a/Italian/main/Settings.apk/res/values-it/strings.xml
+++ b/Italian/main/Settings.apk/res/values-it/strings.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="music_headset_settings">Auricolari</string>
+    <string name="music_audio_effect_optimize_summary">Dirac, cuffie ed altre impostazioni audio</string>
+    <string name="music_audio_effect_optimize_summary_with_hifi">Dirac, Hi-Fi, cuffie ed altre impostazioni audio</string>
+    <string name="music_headset_settings">Headphones and audio effects</string>
     <string name="music_headset_button_settings">Assegna tasti remoti</string>
+    <string name="music_headset_mode_settings">Tasti controllo cuffie</string>
     <string name="music_headset_mode_volume">Controlla il livello del volume</string>
     <string name="music_headset_mode_music">Controlla la riproduzione della musica</string>
     <string name="music_headset_calibrate">Assegna tasti remoti degli auricolari</string>
@@ -15,7 +19,8 @@
     <string name="music_headset_calibrate_confirm">Applicare queste impostazioni?</string>
     <string name="music_headset_no_contected">Auricolari non rilevati</string>
     <string name="music_headset_calibrate_wrong_key">Questo è il pulsante sbagliato</string>
-    <string name="music_HiFi_title">Audio Hi-Fi</string>
+    <string name="music_hifi_title">Audio Hi-Fi</string>
+    <string name="music_hifi_summary">Riduce il rumore e la distorsione, migliorando la qualità audio. Questa funzione aumenta il consumo di batteria.</string>
     <string name="music_mi_effect_title">Dirac HD Sound</string>
     <string name="music_mi_effect_summary">Abilita sempre Dirac HD Sound se ascolti tramite altoparlante</string>
     <string name="music_headphone_settings">Impostazione tipo di auricolari</string>
@@ -32,6 +37,7 @@
     <string name="music_dirac_mode_piston_basic">Edizione Base</string>
     <string name="music_audio_effect_settings">Impostazioni audio</string>
     <string name="music_equalizer">Equalizzatore</string>
+    <string name="music_equalizer_summary">Regola individualmente i livelli per diversi tipi di musica</string>
     <string name="menu_item_show_more">Altro</string>
     <string name="ringtone_mute">Nessuna</string>
     <string name="title_system_resource">Risorse di sistema</string>
@@ -451,7 +457,7 @@ Per riprendere a utilizzare il telefono devi effettuare un ripristino dei dati d
     <string name="manage_device_admin_summary">Visualizza o disattiva amministratori dispositivo</string>
     <string name="manage_notification_access">Accesso alle notifiche</string>
     <string name="manage_notification_access_summary_zero">Le app non possono leggere le notifiche</string>
-    <string name="no_notification_listeners">Nessun listener di notifica installato.</string>
+    <string name="no_notification_listeners">Nessun gestore di notifiche installato.</string>
     <string name="notification_listener_security_warning_title">Attivare %1$s?</string>
     <string name="notification_listener_security_warning_summary">%1$s sarà in grado di leggere tutte le notifiche pubblicate dal sistema o da qualsiasi app installata, le quali potrebbero includere informazioni personali come i nomi dei contatti e il testo dei messaggi ricevuti. Sarà inoltre in grado di ignorare tali notifiche o di attivare pulsanti di azione al loro interno.</string>
     <string name="bluetooth_quick_toggle_title">Bluetooth</string>
@@ -2214,6 +2220,7 @@ Qualsiasi utente può accettare le autorizzazioni delle applicazioni aggiornate 
     <string name="wallpaper_live">Sfondo animato</string>
     <string name="title_font">Font</string>
     <string name="title_font_current">In usi</string>
+    <string name="title_layout_current">Seleziona dimensione font</string>
     <string name="key_settings_title">Tasti</string>
     <string name="key_settings">Tasti</string>
     <string name="screen_key_press">Pressione semplice tasti</string>
@@ -2772,6 +2779,9 @@ Disabilitare le finestre flottanti?"</string>
     <string name="system_backup_section_title">Backup</string>
     <string name="local_backup_section_title">Backup in locale</string>
     <string name="local_backup_section_summary">Backup impostazioni di sistema, account e applicazioni</string>
+    <string name="local_auto_backup_section_title"Backup automatici</string>
+    <string name="local_auto_backup_on">Attivato</string>
+    <string name="local_auto_backup_off">Disattivato</string>
     <string name="other_personal_settings">Impostazioni aggiuntive</string>
     <string name="other_advanced_settings">Impostazioni aggiuntive</string>
     <string name="recent_location_requests_title">Accesso alla posizione</string>
@@ -2829,6 +2839,43 @@ Disabilitare le finestre flottanti?"</string>
     <string name="alpha_build">" | Alfa"</string>
     <string name="developer_build">" | Sviluppatore"</string>
     <string name="stable_build">" | Stabile"</string>
+    <string name="layout_size_small">Piccolo</string>
+    <string name="layout_size_normal">Medio</string>
+    <string name="layout_size_medium">Grande</string>
+    <string name="layout_size_large">Enorme</string>
+    <string name="page_layout_confirm_title">Modifica visualizzazione</string>
+    <string name="page_layout_confirm_message">"Modificare le impostazioni di visualizzazione del dispositivo? L'applicazioni di queste modifiche richiede circa 1 minuto."</string>
+    <string name="page_layout_1">Sun 28/12</string>
+    <string name="page_layout_2">Fotocamera</string>
+    <string name="page_layout_3">Galleria</string>
+    <string name="page_layout_4">Musica</string>
+    <string name="page_layout_5">Video</string>
+    <string name="page_layout_6">Meteo</string>
+    <string name="page_layout_7">Note</string>
+    <string name="page_layout_8">Calendario</string>
+    <string name="page_layout_9">Mail</string>
+    <string name="page_layout_10">News</string>
+    <string name="page_layout_11">Sicurezza</string>
+    <string name="page_layout_12">Impostazioni</string>
+    <string name="page_layout_13">Strumenti</string>
+    <string name="page_layout_14">Giochi</string>
+    <string name="page_layout_15">App</string>
+    <string name="page_layout_16">Temi</string>
+    <string name="page_layout_17">Mi Life</string>
+    <string name="page_layout_18">Recenti</string>
+    <string name="page_layout_19">Contatti</string>
+    <string name="page_layout_20">Cartella</string>
+    <string name="page_layout_21">Contatti 182</string>
+    <string name="page_layout_22">Imposta il mio profilo</string>
+    <string name="page_layout_23">I miei gruppi</string>
+    <string name="page_layout_24">PREFERITI</string>
+    <string name="page_layout_25">Charles Babbage</string>
+    <string name="page_layout_26">Lin Bin</string>
+    <string name="page_layout_27">Manu Jain</string>
+    <string name="page_layout_28">Tim Berners Lee</string>
+    <string name="page_layout_29">Jai Mani</string>
+    <string name="page_layout_30">Frank Santo</string>
+    <string name="page_layout_31">Alan Turing</string>
     <string name="miracast_settings_category">Impostazioni display wireless</string>
     <string name="miracast_display_category">Display</string>
     <string name="miracast_menu_search">Ricerca</string>
