--- a/Italian/main/Browser.apk/res/values-it/strings.xml
+++ b/Italian/main/Browser.apk/res/values-it/strings.xml
@@ -725,6 +725,7 @@ Sei sicuro di voler uscire da questa pagina?"</string>
     <string name="video_project_title">External display</string>
     <string name="video_project_msg">Displaying on %s</string>
     <string name="video_project_button">Stop</string>
+    <string name="clear_history_by_group_alert">Cancellare la cronologia da %s?</string>
     <string name="webapp_app_name">Light Web Apps Store</string>
     <string name="webapp_dialog_title">Aggiungi alla schermata Home</string>
     <string name="webapp_add_to_desktop">Aggiungi questa app alla tua schermata Home?</string>
