--- a/Italian/main/CloudAppBackup.apk/res/values-it/strings.xml
+++ b/Italian/main/CloudAppBackup.apk/res/values-it/strings.xml
@@ -3,9 +3,7 @@
     <string name="app_name">Backup su Cloud</string>
     <string name="button_cancel">Annulla</string>
     <string name="button_ok">OK</string>
-    <string name="button_return">Indietro</string>
     <string name="button_next">Avanti</string>
-    <string name="button_finish">Fine</string>
     <string name="button_continue">Continua</string>
     <string name="button_stop">Interrompi</string>
     <string name="date_format">dd-MM-yyyy HH:mm:ss</string>
@@ -14,7 +12,6 @@
     <string name="sdcard_no_enough_space">Spazio insufficiente</string>
     <string name="retry">Riprova</string>
     <string name="cloud_app_backup_title">Esegui backup su Mi Cloud</string>
-    <string name="cloud_app_just_show_in_current_device">Mostra solo le app su questo dispositivo</string>
     <string name="cloud_app_mine">App scaricate</string>
     <string name="cloud_app_backup_summary">Esegui il backup automatico delle app e dei dati utente quando il dispositivo è in carica e connesso al Wi-Fi</string>
     <string name="cloud_app_function_summary">Quando esegui il backup su Mi Cloud, puoi ripristinare i dati velocemente su qualsiasi dispositivo</string>
@@ -27,19 +24,11 @@
     <string name="cloud_app_version_size">Versione: %1$s, Dimensione: %2$s</string>
     <string name="cloud_app_restore_prompt">Il ripristino sovrascriverà i dati utente locali con quelli del backup su cloud.</string>
     <string name="cloud_app_remove_prompt">%1$s di dati saranno cancellati.</string>
-    <string name="cloud_app_find_backup_prompt_1">Prima del ripristino, vuoi salvare i tuoi dati locali?</string>
-    <string name="cloud_app_find_backup_prompt_2">Se non li salvi ora, saranno sovrascritti dal ripristino.</string>
-    <string name="cloud_app_restore_data_title">Ripristino dati utente</string>
     <string name="cloud_app_restore_app_and_data">Ripristino app e dati utente</string>
-    <string name="cloud_app_restore_summary">Ripristina app installate in precedenza e dati utente</string>
     <string name="cloud_app_restore_data">Ripristina app installate in precedenza</string>
     <string name="cloud_app_dont_restore">Non ripristinare</string>
     <string name="cloud_app_restore_wifi_prompt">Devi essere connesso ad internet tramite Wi-Fi per eseguire il ripristino dei dati</string>
-    <string name="cloud_app_restore_query_error_prompt">Impossibile ottenere i dati dal cloud. Le app e i dati utente saranno ripristinati automaticamente quando il tuo dispositivo sarà in grado di raggiungere i dati del backup.</string>
-    <string name="cloud_app_device">Dispositivo</string>
-    <string name="cloud_app_data_in_other_devices">Backup non eseguito su questo dispositivo</string>
     <string name="cloud_app_no_data">Nessun dato</string>
-    <string name="cloud_app_invalid_op">Non è possibile visualizzare i dati del cloud durante un backup o un ripristino</string>
     <string name="cloud_app_invalid_op_when_removing">Non è possibile visualizzare i dati del cloud mentre vengono rimossi</string>
     <string name="cloud_app_remove_pending">In attesa…</string>
     <string name="cloud_app_remove_progress">Cancellazione…</string>
@@ -63,30 +52,15 @@
     <string name="cloud_app_restore_cancel_prompt_message">Ripristino non terminato, annullare comunque?</string>
     <string name="cloud_app_remove_cancel_prompt_message">Cancellazione non terminata, annullare comunque?</string>
     <string name="cloud_app_check_data">Recupero dati dal Mi Cloud…</string>
-    <string name="cloud_app_check_data_timeout">Connessione scaduta</string>
-    <string name="cloud_app_load_data">Recupero dati del backup…</string>
-    <string name="cloud_app_load_data_timeout">Connessione scaduta</string>
-    <string name="cloud_app_check_data_fail">Impossibile ottenere dati dal Mi Cloud</string>
     <string name="cloud_app_no_network">Impossibile connettersi alla rete</string>
-    <string name="cloud_app_no_wifi">Impossibile connettersi alla rete Wi-Fi</string>
-    <string name="cloud_app_no_wifi_connect">Impossibile connettersi alla rete Wi-Fi</string>
-    <string name="cloud_app_loading_with_mobile_network_prompt">"Usare la connessione dati mobile per completare l'esecuzione?"</string>
-    <string name="just_support_op_with_wifi_connected">Puoi usare questa funzionalità solo quando hai una connessione Wi-Fi</string>
     <string name="button_restore">Ripristina</string>
-    <string name="button_abandon">Sovrascrivi</string>
     <string name="button_delete">Cancella</string>
     <string name="customization"><u>Personalizza</u></string>
-    <string name="customization_under_wifi_prompt">Puoi usare questa funzionalità solo quando hai una connessione Wi-Fi</string>
-    <string name="my_phone">Il mio dispositivo</string>
     <string name="xiaomi_account_type">com.xiaomi</string>
     <string name="self_phone">Questo dispositivo</string>
-    <string name="check_fail">Verifica fallita</string>
-    <string name="network_timeout">Connessione alla rete scaduta</string>
     <string name="skip_recovery">Salta</string>
-    <string name="start_whole_recovery">Inizia il ripristino da \"%s\"</string>
     <string name="process_whole_recovery">Ripristino da \"%s\"</string>
     <string name="device_xiaomi">Mi Phone</string>
-    <string name="device_hongmi">Redmi</string>
     <string name="miui_device_name">Android</string>
     <string name="backup_immediately">Esegui backup ora</string>
     <string name="app_installed">Installata</string>
@@ -98,7 +72,6 @@
     <string name="disable_backup">Disabilita</string>
     <string name="dialog_disable_backup">Disabilita backup</string>
     <string name="no_backup">Nessun backup</string>
-    <string name="dont_backup">Non eseguire il backup</string>
     <string name="confirm_disable_backup">Disabilita e rimuovi \"%s\"?</string>
     <string name="already_deleted">(cancellato)</string>
     <string name="datasize_unknown">Sconosciuto</string>
@@ -115,7 +88,26 @@
     <string name="restoreing_file_tile">Ripristino di %d file</string>
     <string name="listview_empty_no_results">Nessun risultato</string>
     <string name="display_early_backup">Mostra backup precedenti</string>
-    <string name="intro_v5tov6">"MIUI V6 usa un nuova infrastruttura per migliorare le performance. Occorre attendere qualche istante per trasferire i tuoi dat dalla vecchia infrastruttura di MIUI."</string>
-    <string name="v5tov6_complete">Trasferimento completato</string>
     <string name="dialog_prompt_stop_backup">Fermare il backup?</string>
+    <string name="menu_item_sort">Ordina per</string>
+    <string name="menu_item_sort_name">Nome</string>
+    <string name="menu_item_sort_size">Dimensione</string>
+    <string name="menu_item_managespace">gestisci spazio</string>
+    <string name="managespace_total_space">Spazio totale: %s</string>
+    <string name="managespace_delete_backup">Elimina backup</string>
+    <string name="error_unknown">Qualcosa è andato storto</string>
+    <string name="backup_size">Dimensione: %s</string>
+    <string name="device_delete_prompt">Eliminare il backup di %s?</string>
+    <string name="v5_data">Dati V5</string>
+    <string name="v5_delete">Elimina dati V5</string>
+    <string name="desktop_waiting">In attesa</string>
+    <string name="desktop_downloading">In download</string>
+    <string name="desktop_installing">Installazione</string>
+    <string name="desktop_recovering">Ripristino</string>
+    <string name="recover_from_micloud">Ripristina utilizzando Mi Cloud</string>
+    <string name="open_wifi">Attiva Wi-Fi adesso</string>
+    <string name="open_wifi_description">Connettiti ad una rete Wi-Fi per ripristinare i dati delle applicazioni</string>
+    <string name="open_wifi_setting">Impostazioni Wi-Fi</string>
+    <string name="select_backup_data">Seleziona backup</string>
+    <string name="name_model">"%2$s di %1$s"</string>
 </resources>
