--- a/Italian/main/SecurityCenter.apk/res/values-it/strings.xml
+++ b/Italian/main/SecurityCenter.apk/res/values-it/strings.xml
@@ -13,7 +13,7 @@
     <string name="summary_optimizer">Carica e confronta i nomi delle cartelle sconosciute con il database online</string>
     <string name="button_optimizer">OK</string>
     <string name="title_antivirus">Scansione Virus</string>
-    <string name="header_antivirus">Utilizzando questa funzione accetti i "<a href="http://misc.3g.qq.com/g/agreement/index.jsp?id=7">Termini del Servizio</a> di Tencent.</string>
+    <string name="header_antivirus">"Questa funzione crittografa ed invia l'ID del dispositivo sui server Tencent (%s)"</string>
     <string name="name_antivirus">"Leggi l'Informativa sulla Privacy"</string>
     <string name="text_antivirus">Utilizza database virus online</string>
     <string name="text_antivirus_oversea">Aggiorna database virus</string>
