--- a/Italian/main/SecurityCenter.apk/res/values-it/strings.xml
+++ b/Italian/main/SecurityCenter.apk/res/values-it/strings.xml
@@ -331,7 +331,7 @@
     <string name="protection_category_dangerous_title">Rischi (%d)</string>
     <string name="protection_category_recommend_title">Modifiche consigliate (%d)</string>
     <string name="protection_category_security_title">Puliti (%d)</string>
-    <string name="title_virus_no">Viruse rilevati</string>
+    <string name="title_virus_no">Virus rilevati</string>
     <string name="title_virus_yes">Nessun virus rilevato</string>
     <string name="summary_virus">Trovati %2$d virus</string>
     <string name="title_permission_no">Monitor permessi disattivato</string>
