--- a/Italian/main/miui.apk/res/values-it-rIT/strings.xml
+++ b/Italian/main/miui.apk/res/values-it-rIT/strings.xml
@@ -91,8 +91,88 @@
     <string name="solar_term_light_snow">Nevicate leggere</string>
     <string name="solar_term_heavy_snow">Intense nevicate</string>
     <string name="solar_term_winter_solstice">Solstizio invernale</string>
+  <string name="chinese_month"/>
+    <string name="chinese_day_elementary"/>
+    <string name="chinese_digit_zero"/>
+    <string name="chinese_digit_one"/>
+    <string name="chinese_digit_two"/>
+    <string name="chinese_digit_three"/>
+    <string name="chinese_digit_four"/>
+    <string name="chinese_digit_five"/>
+    <string name="chinese_digit_six"/>
+    <string name="chinese_digit_seven"/>
+    <string name="chinese_digit_eight"/>
+    <string name="chinese_digit_nine"/>
+    <string name="chinese_digit_ten"/>
+    <string name="chinese_digit_twenty"/>
+    <string name="chinese_digit_thirty"/>
+    <string name="chinese_day_1"/>
+    <string name="chinese_day_2"/>
+    <string name="chinese_day_3"/>
+    <string name="chinese_day_4"/>
+    <string name="chinese_day_5"/>
+    <string name="chinese_day_6"/>
+    <string name="chinese_day_7"/>
+    <string name="chinese_day_8"/>
+    <string name="chinese_day_9"/>
+    <string name="chinese_day_10"/>
+    <string name="chinese_day_11"/>
+    <string name="chinese_day_12"/>
+    <string name="chinese_day_13"/>
+    <string name="chinese_day_14"/>
+    <string name="chinese_day_15"/>
+    <string name="chinese_day_16"/>
+    <string name="chinese_day_17"/>
+    <string name="chinese_day_18"/>
+    <string name="chinese_day_19"/>
+    <string name="chinese_day_20"/>
+    <string name="chinese_day_21"/>
+    <string name="chinese_day_22"/>
+    <string name="chinese_day_23"/>
+    <string name="chinese_day_24"/>
+    <string name="chinese_day_25"/>
+    <string name="chinese_day_26"/>
+    <string name="chinese_day_27"/>
+    <string name="chinese_day_28"/>
+    <string name="chinese_day_29"/>
+    <string name="chinese_day_30"/>
     <string name="am">AM</string>
     <string name="pm">PM</string>
+    <string name="chinese_leap"/>
+    <string name="chinese_month_january"/>
+    <string name="chinese_month_february"/>
+    <string name="chinese_month_march"/>
+    <string name="chinese_month_april"/>
+    <string name="chinese_month_may"/>
+    <string name="chinese_month_june"/>
+    <string name="chinese_month_july"/>
+    <string name="chinese_month_august"/>
+    <string name="chinese_month_september"/>
+    <string name="chinese_month_october"/>
+    <string name="chinese_month_november"/>
+    <string name="chinese_month_december"/>
+    <string name="heavenly_stems_jia"/>
+    <string name="heavenly_stems_yi"/>
+    <string name="heavenly_stems_bing"/>
+    <string name="heavenly_stems_ding"/>
+    <string name="heavenly_stems_wu"/>
+    <string name="heavenly_stems_ji"/>
+    <string name="heavenly_stems_geng"/>
+    <string name="heavenly_stems_xin"/>
+    <string name="heavenly_stems_ren"/>
+    <string name="heavenly_stems_gui"/>
+    <string name="earthly_branches_zi"/>
+    <string name="earthly_branches_chou"/>
+    <string name="earthly_branches_yin"/>
+    <string name="earthly_branches_mao"/>
+    <string name="earthly_branches_chen"/>
+    <string name="earthly_branches_si"/>
+    <string name="earthly_branches_wu"/>
+    <string name="earthly_branches_wei"/>
+    <string name="earthly_branches_shen"/>
+    <string name="earthly_branches_you"/>
+    <string name="earthly_branches_xu"/>
+    <string name="earthly_branches_hai"/>
     <string name="month_january">Gennaio</string>
     <string name="month_february">Febbraio</string>
     <string name="month_march">Marzo</string>
@@ -129,6 +209,18 @@
     <string name="month_october_shortest">O</string>
     <string name="month_november_shortest">N</string>
     <string name="month_december_shortest">D</string>
+    <string name="chinese_symbol_animals_mouse"/>
+    <string name="chinese_symbol_animals_cow"/>
+    <string name="chinese_symbol_animals_tiger"/>
+    <string name="chinese_symbol_animals_rabbit"/>
+    <string name="chinese_symbol_animals_dragon"/>
+    <string name="chinese_symbol_animals_snake"/>
+    <string name="chinese_symbol_animals_horse"/>
+    <string name="chinese_symbol_animals_sheep"/>
+    <string name="chinese_symbol_animals_monkey"/>
+    <string name="chinese_symbol_animals_chicken"/>
+    <string name="chinese_symbol_animals_dog"/>
+    <string name="chinese_symbol_animals_pig"/>
     <string name="eras_bc">AC</string>
     <string name="eras_ad">DC</string>
     <string name="sunday">Domenica</string>
@@ -223,10 +315,10 @@
     <string name="fmt_time_24hour_minute_second_millis">H:mm:ss.S</string>
     <string name="fmt_date_numeric_day">d</string>
     <string name="fmt_date_numeric_month">M</string>
-    <string name="fmt_date_numeric_month_day">d-M</string>
+    <string name="fmt_date_numeric_month_day">d/M</string>
     <string name="fmt_date_numeric_year">yyyy</string>
-    <string name="fmt_date_numeric_year_month">M-yyyy</string>
-    <string name="fmt_date_numeric_year_month_day">d-M-yyyy</string>
+    <string name="fmt_date_numeric_year_month">M/yyyy</string>
+    <string name="fmt_date_numeric_year_month_day">d/M/yyyy</string>
     <string name="fmt_date_day">d</string>
     <string name="fmt_date_short_month">MMM</string>
     <string name="fmt_date_short_month_day">d MMM</string>
