--- a/Italian/main/miui.apk/res/values-it-rIT/strings.xml
+++ b/Italian/main/miui.apk/res/values-it-rIT/strings.xml
@@ -12,7 +12,7 @@
     <string name="date_picker_label_year" />
     <string name="date_picker_label_month" />
     <string name="date_picker_label_day" />
-    <string name="time_picker_label_hour">H</string>
+    <string name="time_picker_label_hour">O</string>
     <string name="time_picker_label_minute">M</string>
     <string name="yesterday">Ieri</string>
     <string name="today">Oggi</string>
@@ -91,7 +91,7 @@
     <string name="solar_term_light_snow">Nevicate leggere</string>
     <string name="solar_term_heavy_snow">Intense nevicate</string>
     <string name="solar_term_winter_solstice">Solstizio invernale</string>
-  <string name="chinese_month"/>
+    <string name="chinese_month"/>
     <string name="chinese_day_elementary"/>
     <string name="chinese_digit_zero"/>
     <string name="chinese_digit_one"/>
