--- a/Italian/main/CloudService.apk/res/values-it/strings.xml
+++ b/Italian/main/CloudService.apk/res/values-it/strings.xml
@@ -45,24 +45,27 @@
     <string name="phone_number_may_required_dspt_provision">"Questo servizio potrebbe richiedere il tuo numero di telefono. "</string>
     <string name="phone_number_required_dspt_provision">"Questo servizio richie il tuo numero di telefono. "</string>
     <string name="sync_dspt_provision">"Mi Cloud sincronizza le tue foto, SMS, note e molto alo su ttutti i tuoi dispositivi Mi. Puoi accedere ai tuoi dati anche da "</string>
+    <string name="sync_dspt_provision_title">Mi Cloud</string>
+    <string name="sync_dspt_provision">"Sincronizzazione
+Sincronizza le tue foto, i contatti, le note e molto altro su tutti i tuoi dispositivi o accedi da "</string>
     <string name="sync_dspt_provision2">i.mi.com</string>
     <string name="sync_dspt_provision2_int">mi.com/micloud</string>
-    <string name="sync_dspt_provision3">".
-
-Puoi disattivare questa funzione in qualsiasi momento nele Impostazioni.
+    <string name="sync_dspt_provision3">". Puoi disattivare questa funzione in qualsiasi momento nele Impostazioni.
 "</string>
-    <string name="find_device_dspt_provision">"Se perdi il tuo dispositivo puoi andare su "</string>
+    <string name="sync_dspt_entrance_provision">Sync your photos, contacts, and messages, or locate your device.</string>
+    <string name="sync_dspt_entrance_provision_2">Learn more</string>
+    <string name="find_device_dspt_provision">"Trova Telefono
+Localizza, blocca o cancella il telefono da "</string>
     <string name="find_device_dspt_provision_2">i.mi.com</string>
     <string name="find_device_dspt_provision_2_int">mi.com/micloud</string>
-    <string name="find_device_dspt_provision_3">" pèer ocalizzarlo, bloccarlo o resettarlo.
-
-Puoi attivare e disattivare questa funzione in qualsiasi momento nele Impostazioni.
-"</string>
+    <string name="find_device_dspt_provision_3">" . Puoi attivare questa funzione in qualsiasi momento in Impostazioni."</string>
     <string name="find_device_send_sms_alert">Se cambi SIM, verrà inviato automaticamente un altro SMS per attivare questo servizio.</string>
     <string name="mx_dspt_provision">"Mi Message ti consente di inviare messaggi ad altri utenti MIUI senza costi aggiuntivi.
-
 Puoi attivare e disattivare questa funzione in qualsiasi momento nele Impostazioni."</string>
-    <string name="user_agreement_p6">"L'utilizzo di questa funziopne è soggetto a "</string>
+    <string name="mx_dspt_provision_privacy">"Questo servizio potrebbe richiedere il tuo numero. Il tuo operatore potrebbe addebitarti dei costi per l'SMS utilizzato per l'attivazione del servizio.
+Questa funziona crittografa ed invia l'ID del tuo dispositivo ai server Xiaomi."</string>
+    <string name="user_agreement_p6">"
+L'utilizzo di questa funziopne è soggetto a "</string>
     <string name="user_agreement_p7">"Condizioni di Utilizzo Mi Cloud"</string>
     <string name="user_agreement_p8">.</string>
     <string name="privacy_policy">Informativa sulla Privacy</string>
