--- a/Italian/main/SecurityCenter.apk/res/values-it/strings.xml
+++ b/Italian/main/SecurityCenter.apk/res/values-it/strings.xml
@@ -230,9 +230,26 @@
     <string name="every_day">Tutti i giorni</string>
     <string name="legal_workday">Festivi</string>
     <string name="never">Solo una volta</string>
+    <string name="power_20s_shutdown">Il dispositivo si spegnerà tra 20 secondi</string>
+    <string name="boot_reminder_day">Il dispositivo si accenderà tra %1$dd %2$dh %3$dm</string>
+    <string name="boot_reminder_hour">Il dispositivo si accenderà tra %1$dh %2$dm</string>
+    <string name="boot_reminder_minute">Il dispositivo si accenderà tra %1$dm</string>
+    <string name="boot_reminder">Accendi il dispositivo ad un orario rpogrammato/string>
+    <string name="shutdown_cancel_reminder">Non si è spento</string>
+    <string name="shutdown_cancel_reminder_detail">Il dispositivo non si è spento perchè era in corso una chiamata</string>
     <string name="legal_workday_invalidate">Dati scaduti (Attualmente attivo da Lunedì a Venerdì)</string>
     <string name="legal_workday_invalidate_message">(Dati scaduti,premi per aggiornare interconnessioni)</string>
     <string name="legal_workday_message">(Salta le festività)</string>
+    <string name="boot_time_day">Il dispositivo si accenderà tra %1$dd alle %2$s</string>
+    <string name="boot_time">Il dispositivo si accenderà tra %1$s</string>
+    <string name="shutdown_time_day">Il dispositivo si spegnerà tra %1$dd alle %2$s</string>
+    <string name="shutdown_time">Il dispositivo si spegnerà tra %1$s</string>
+    <string name="boot_day_shutdown_day">Il dispositivo si accenderà tra %1$dd alle %2$s e si spegnerà tra %3$dd alle %4$s</string>
+    <string name="shutdown_day_boot_day">Il dispositivo si spegnerà tra %1$dd alle %2$s e si accenderà tra %3$dd alle %4$s</string>
+    <string name="shutdown_boot_day">Il dispositivo si spegnerà alle %1$s e si accenderà tra %2$dd alle %3$s</string>
+    <string name="boot_shutdown_day">Il dispositivo si accenderà alle %1$s e si spegnerà tra %2$dd alle %3$s</string>
+    <string name="boot_shutdown">Il dispositivo si accenderà alle %1$s e si spegnerà alle %2$s</string>
+    <string name="shutdown_boot">Il dispositivo si spegnerà alle %1$s e si accenderà alle %2$s</string>
     <string name="app_name_securitycenter">Sicurezza</string>
     <string name="ok">OK</string>
     <string name="cancel">Annulla</string>
