--- a/Italian/main/MiuiCamera.apk/res/values-it/strings.xml
+++ b/Italian/main/MiuiCamera.apk/res/values-it/strings.xml
@@ -99,7 +99,7 @@
     <string name="pref_camera_whitebalance_entry_cloudy">Nuvoloso</string>
     <string name="pref_camera_whitebalance_entry_manual">Manuale</string>
     <string name="pref_camera_whitebalance_entry_measure">Misura</string>
-    <string name="pref_camera_coloreffect_title">Effetti colore</string>
+    <string name="pref_camera_coloreffect_title">Filtri</string>
     <string name="pref_camera_coloreffect_entry_sepia" />
     <string name="pref_camera_coloreffect_entry_negative" />
     <string name="pref_camera_coloreffect_entry_posterize" />
@@ -329,4 +329,5 @@
     <string name="pref_camera_long_press_shutter_feature_title">Pressione prolungata</string>
     <string name="pref_camera_long_pressing_burst_shooting_entry_focus">Messa a fuoco</string>
     <string name="pref_camera_long_pressing_burst_shooting_entry_burst">Scatto multiplo</string>
+    <string name="pref_camera_asd_title">Scena Automatica</string>
 </resources>
