--- a/Italian/main/MiuiHome.apk/res/values-it/strings.xml
+++ b/Italian/main/MiuiHome.apk/res/values-it/strings.xml
@@ -14,6 +14,9 @@
     <string name="apply_as_lock_wallpaper_message">Applicare questo sfondo anche alla lockscreen?</string>
     <string name="lock_screen_failed_message">Impossibile applicare</string>
     <string name="lock_screen_success_message">Applicato</string>
+    <string name="wallpaper_failed_message">Impossibile applicare lo sfondo</string>
+    <string name="wallpaper_success_message">Sfondo applicato con successo</string>
+    <string name="is_setting_wallpaper_toast">Applicazione sfondo in corso…</string>
     <string name="current_wallpaper">Attuale</string>
     <string name="menu_item_add_item">Inserire nella schermata home</string>
     <string name="group_shortcuts">Scorciatoie</string>
@@ -53,7 +56,8 @@
     <string name="menu_sort">Ordina icone desktop</string>
     <string name="menu_launcher_setting">Launcher</string>
     <string name="editing_tips">Modifica home</string>
-    <string name="editing_mode_title_empty">Seleziona selezionati</string>
+    <string name="editing_mode_title">%1$d selezionati</string>
+    <string name="editing_mode_title_empty">Seleziona elementi</string>
     <string name="multi_selecting_tips">"Tocca un'icona per iniziare"</string>
     <string name="editing_add_widget_tips">Aggiungi widget</string>
     <string name="editing_set_wallpaper_tips">Cambia sfondo</string>
@@ -62,7 +66,13 @@
     <string name="cant_remove_retained_app">Impossibile rimuovere questa applicazione</string>
     <string name="uninstall_dialog_message">La disinstallazione rimuoverà tutti i dati</string>
     <string name="uninstall_dialog_title_format">Disinstalla applicazione \"%s\"?</string>
+    <string name="uninstall_dialog_title_multi_format" formatted="false">Disinstallare %s ed altre %d applicazioni?</string>
     <string name="uninstall">Disinstalla</string>
+    <string name="uninstall_result_multi_succeeded">%1$d applicazioni disinstallate</string>
+    <string name="uninstall_result_succeeded">Applicazioni disinstallate</string>
+    <string name="uninstall_result_failed">Impossibile disinstallare %s</string>
+    <string name="uninstall_result_two_failed">"Impossibile disinstallare %s ed un'altra applicazione"</string>
+    <string name="uninstall_result_other_failed" formatted="false">Impossibile disinstallare %s ed altre %d applicazioni</string>
     <string name="starting_preset_app">Inizio…</string>
     <string name="install">Installa</string>
     <string name="cant_remove_folder">Non puoi rimuovere questa cartella</string>
@@ -84,6 +94,20 @@
     <string name="default_folder_title_recommend">Preferiti</string>
     <string name="default_folder_title_game">Giochi</string>
     <string name="default_folder_title_security">Sistema</string>
+    <string name="wallpaper_settings">Impostazioni sfondo</string>
+    <string name="choose_wallpaper">Scegli sfondo</string>
+    <string name="current_preview">Anteprima</string>
+    <string name="wallpaper">Sfondo</string>
+    <string name="mi_wallpaper">Sfondo MIUI</string>
+    <string name="show_all">Mostra tutto</string>
+    <string name="local_wallpaper">Locali</string>
+    <string name="setting_wallpaper_tip">Sposta o ridimensiona</string>
+    <string name="apply_as_wallpaper">Home</string>
+    <string name="apply_as_lock_screen">Lockscreen</string>
+    <string name="apply_both">Entrambi</string>
+    <string name="enable_wallpaper_scroll">Attiva scorrimento sfondo</string>
+    <string name="disable_wallpaper_scroll">Disattiva scorrimento sfondo</string>
+    <string name="default_shortcut_title_10086">10086.cn</string>
     <string name="online_wallpaper">Online</string>
     <string name="custom_wallpaper_picker">Modifica</string>
     <string name="reset_scene_prompt">La scena verrà ripristinata al layout predefinito</string>
@@ -128,6 +152,9 @@
     <string name="gadget_photo_24_label">Cornice 2x4</string>
     <string name="gadget_google_search_label">Ricerca Google</string>
     <string name="gadget_mtz_label">Mi Gadget</string>
+    <string name="gadget_calendar_label">Calendario</string>
+    <string name="gadget_notes_label">Note</string>
+    <string name="gadget_calculator_label">Calcolatrice</string>
     <string name="gadget_load_error">Errore caricamento widget…</string>
     <string name="invalid_contact_shortcut">Collegamento non valido</string>
     <string name="guide_tips_editing_mode">Tocca e tieni premuto per prendere un widget</string>
@@ -182,4 +209,8 @@
     <string name="menu_picktheme">Seleziona tema</string>
     <string name="scroll_tip_format_when_announce_accessibility">Pagina %1$d, %2$d app</string>
     <string name="editing_mode_enter_tip_text">Chiudi con due dita per modificare la Home</string>
+    <string name="delete">Elimina</string>
+    <string name="delete_wallpaper_message">Eliminare %1$d sfondo selezionato?</string>
+    <string name="delete_wallpapers_message">Eliminare i %1$d sfondi selezionati?</string>
+    <string name="is_system_wallpaper_message">Impossibile eliminare risorse di sistema</string>
 </resources>
